2001-01-29  John Harper  <jsh@eazel.com>

	* session.c (panel_session_save): deleted the code to hide
	panels after responding to a save-yourself message (that is
	before a session shutdown). The reason is that if the shutdown
	is later cancelled the panels are left hidden

	(An alternative fix would be to reshow the panels if a
	shutdown-cancelled message is received, but I can't see the
	point of hiding the panels anyway - they will be destroyed if
	the panel exits?)

2001-01-30  jacob berkman  <jacob@ximian.com>

	* foobar-widget.c (task_notify): hide the menu item when the task
	is destroyed

	* scroll-menu.c (scroll_menu_init): sink the scroll buttons so
	they don't leak

Sat Feb 03 19:39:40 2001  Julian Missig <julian@jabber.org>

	* status.c: Status Dock now fits in a 'tiny' sized panel.

Thu Feb 01 20:10:55 2001  George Lebl <jirka@5z.com>

	* panel_config.c:  How did this ever build for me before, fix
	  typos

Wed Jan 31 00:06:50 2001  George Lebl <jirka@5z.com>

	* panel_config.[ch]: keep a flag around to see if we are updating the
	  panel ourselves, in which case do not update ourselves.

Wed Jan 31 03:03:40 2001  George Lebl <jirka@5z.com>

	* panel-util.c:  Fix setting of background colors in different
	  themes.  So that changing themes effects things.

	* doc/Makefile.am, doc/panel.sgml:  Fix build problem.

Tue Jan 30 22:30:26 2001  George Lebl <jirka@5z.com>

	* panel_config.c: prevent infinite loop with background pixmap
	  setting, but this needs more work

	* basep-widget.c: follow style_set signal and reset styles on the
	  subwidgets to follow theme

	* panel.c: make sure button #3 gets through on panels, so that menu
	  gets displayed

Thu Jan 25 04:10:03 2001  George Lebl <jirka@5z.com>

	* panel.c: 1st button click on  the panel space also starts a panel
	  drag

Thu Jan 25 03:01:19 2001  George Lebl <jirka@5z.com>

	* panel_config.[ch], drawer.c: added the level to all other panel
	  and drawer configurations
