@@ -1,3 +1,8 @@
+Tue Feb 06 18:34:05 2001  George Lebl <jirka@5z.com>
+
+	* basep-widget.c, foobar-widget.c: Set wmname/wmclass to
+	  panel_window/Panel on the panel windows.
+
 2001-01-29  John Harper  <jsh@eazel.com>
 
 	* session.c (panel_session_save): deleted the code to hide
